--- a/desafios/modulo-01/d009/style.css
+++ b/desafios/modulo-01/d009/style.css
@@ -14,6 +14,9 @@ h1 {
 
 #video, #videos {
     text-align: center;
+    width: 1350px; 
+    height: 280px; 
+    border: 3px solid rgb(177, 6, 6);
 }
 
 #voltar{
