--- a/desafios/modulo-01/d009/style.css
+++ b/desafios/modulo-01/d009/style.css
@@ -7,7 +7,7 @@ body {
 h1 {
     color: white;
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', 'sans-serif';
     background-color: rgb(184, 17, 40);
     border-radius: 5px;
 }
