--- a/estudos/exercicios/ex019/style.css
+++ b/estudos/exercicios/ex019/style.css
@@ -1,25 +1,41 @@
 @charset "UTF-8"; 
 
 /* 
-    em HTML é id = em CSS é #
-    em HTML é class = em CSS é .
+    em HTML é id = em CSS é # (só pode um elemento)
+    em HTML é class = em CSS é . (pode vários elementos)
 */
 
 body {
-    background-color: rgb(205, 255, 203);
+    background-color: #D6FDE9;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    color: rgb(4, 109, 0);
+    color: #1E402F;
 }
 
 h1#principal {
     text-align: center;
-    background-color: rgb(4, 109, 0);
+    background-color: #3C805E;
     color: white;
 }
 
 h2 {
-    color: rgb(51, 77, 49);
+    color: #3C805E;
+}
+
+.basico {
+    color: #3C805E;
+}
+
+.intermediario {
+    color: #80793C;
+}
+
+.avancado {
+    color: #803C3C;
+}
+
+.destaque {
+    background-color: #C5C56070;
 }
