--- a/estudos/desafios/modulo-02/d010/estilos/style.css
+++ b/estudos/desafios/modulo-02/d010/estilos/style.css
@@ -1,5 +1,46 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+@font-face {
+    font-family: 'Android';
+    src: url('../fontes/idroid.otf') format('opentype');
+    font-weight: normal;
+}
+
+/*
+PALETAS DE CORES - MONOCROMATICA
+#C5EBD6
+#83E1AD
+#3DDC84
+#2FA866
+#1A5C37
+#063D1E
+*/
+
+:root {
+    --cor0: #C5EBD6;
+    --cor1: #83E1AD;
+    --cor2: #3DDC84;
+    --cor3: #2FA866;
+    --cor4: #1A5C37;
+    --cor5: #063D1E;
+
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: 'Bebas Neue', cursive;
+    --fonte-android: 'Android', cursive;
+}
+
 body {
-    background-color: #C5EBD6;
+    background-color: var(--cor0);
+    font-family: var(--fonte-padrao);
+}
+
+header > h1 {
+    color: var(--cor3);
+}
+
+main h1 {
+    /* color: var(--cor5); */
+    color: red;
 }
