--- a/estudos/desafios/modulo-02/d010/estilos/style.css
+++ b/estudos/desafios/modulo-02/d010/estilos/style.css
@@ -31,16 +31,47 @@ PALETAS DE CORES - MONOCROMATICA
     --fonte-android: 'Android', cursive;
 }
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
     background-color: var(--cor0);
     font-family: var(--fonte-padrao);
 }
 
+header {
+    background: var(--cor4);
+}
+
 header > h1 {
-    color: var(--cor3);
+    color: white;
+    font-family: var(--fonte-destaque);
+}
+
+header > p {
+    color: white;
+}
+
+nav {
+    background-color: var(--cor5);
+}
+
+main {
+    background-color: white;
 }
 
 main h1 {
-    /* color: var(--cor5); */
-    color: red;
+    color: var(--cor5);
+    font-family: var(--fonte-android);
+}
+
+main h2 {
+    font-family: var(--fonte-android);
+}
+
+footer {
+    background-color: var(--cor5);
+    color: white;
 }
