--- a/estudos/desafios/modulo-02/d010/estilos/style.css
+++ b/estudos/desafios/modulo-02/d010/estilos/style.css
@@ -1,7 +1,5 @@
 @charset "UTF-8";
-
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
 @font-face {
     font-family: 'Android';
     src: url('../fontes/idroid.otf') format('opentype');
@@ -25,7 +23,6 @@ PALETAS DE CORES - MONOCROMATICA
     --cor3: #2FA866;
     --cor4: #1A5C37;
     --cor5: #063D1E;
-
     --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
     --fonte-destaque: 'Bebas Neue', cursive;
     --fonte-android: 'Android', cursive;
@@ -41,6 +38,11 @@ body {
     font-family: var(--fonte-padrao);
 }
 
+/* Icone de link */
+a.externo::after {
+    content: '\00A0\1F517';
+}
+
 header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     min-width: 150px;
@@ -48,7 +50,7 @@ header {
     padding-top: 40px;
 }
 
-header > h1 {
+header>h1 {
     color: white;
     font-family: var(--fonte-destaque);
     font-size: 3em;
@@ -56,7 +58,7 @@ header > h1 {
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.267);
 }
 
-header > p {
+header>p {
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
     color: white;
@@ -73,7 +75,7 @@ nav {
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.192);
 }
 
-nav > a {
+nav>a {
     color: white;
     padding: 10px;
     border-radius: 5px;
@@ -82,7 +84,7 @@ nav > a {
     transition-duration: .5s;
 }
 
-nav > a:hover {
+nav>a:hover {
     background-color: var(--cor3);
     color: var(--cor5)
 }
@@ -148,7 +150,43 @@ main img.pequena {
     margin: auto;
 }
 
+aside {
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+}
+
+aside > h3 {
+    background-color: var(--cor4);
+    color: white;
+    padding: 10px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.281);
+}
+
+aside > ul {
+    list-style-type: '\2714\00A0\00A0';
+    list-style-position: inside;
+    columns: 2;
+}
+
 footer {
     background-color: var(--cor5);
     color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 5px;
+}
+
+footer a {
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+    color: var(--cor1);
+
 }
