--- a/estudos/desafios/modulo-02/d010/estilos/style.css
+++ b/estudos/desafios/modulo-02/d010/estilos/style.css
@@ -50,15 +50,16 @@ header {
     padding-top: 40px;
 }
 
-header>h1 {
+header > h1 {
     color: white;
     font-family: var(--fonte-destaque);
     font-size: 3em;
+    font-weight: normal;
     margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.267);
 }
 
-header>p {
+header > p {
     font-family: var(--fonte-padrao);
     font-size: 1.2em;
     color: white;
@@ -75,7 +76,7 @@ nav {
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.192);
 }
 
-nav>a {
+nav > a {
     color: white;
     padding: 10px;
     border-radius: 5px;
@@ -84,7 +85,7 @@ nav>a {
     transition-duration: .5s;
 }
 
-nav>a:hover {
+nav > a:hover {
     background-color: var(--cor3);
     color: var(--cor5)
 }
@@ -104,12 +105,15 @@ main {
 main h1 {
     color: var(--cor5);
     font-family: var(--fonte-android);
+    font-size: 1.8em;
+    font-weight: normal;
 }
 
 main h2 {
     font-family: var(--fonte-android);
     color: var(--cor4);
     font-size: 1.3em;
+    font-weight: normal;
     background-image: linear-gradient(to right, var(--cor1), transparent);
     text-indent: 8px;
 }
@@ -148,6 +152,16 @@ main img.pequena {
     max-width: 350px;
     display: block;
     margin: auto;
+}
+
+div.video {
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 50px;
+}
+
+div.video > iframe {
+
 }
 
 aside {
