--- a/estudos/desafios/modulo-02/d010/estilos/style.css
+++ b/estudos/desafios/modulo-02/d010/estilos/style.css
@@ -77,7 +77,7 @@ nav {
 }
 
 nav > a {
-    color: white;
+    color: var(--cor1);
     padding: 10px;
     border-radius: 5px;
     text-decoration: none;
@@ -158,10 +158,16 @@ div.video {
     background-color: var(--cor5);
     margin: 0px -20px 30px -20px;
     padding: 50px;
+    padding-bottom: 58%;
+    position: relative;
 }
 
 div.video > iframe {
-
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
 }
 
 aside {
